--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -19,5 +19,11 @@
 
 {% block display_entries %}
   <Bazar-Table :params="params" :entries="entriesToDisplay" :ready="ready" :root="$root" :isadmin="{{ hasAcl("@admins")|json_encode }}">
+    <template #base>
+      <template v-if="ready">
+          TEST
+      </template>
+      <spinner-loader v-if="isLoading || !ready" class="overlay super-overlay" :height="500"></spinner-loader>
+    </template>
   </Bazar-Table>
 {% endblock %}
