--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -6,13 +6,14 @@
 
 {% extends "@bazar/entries/index-dynamic.twig" %}
 
-{% set necessary_fields = [] %}
+{% set necessary_fields = (params.necessary_fields is defined ? params.necessary_fields|split(',') : [])|merge(['owner']) %}
 
 {% block assets %}
   {{ include_css('styles/vendor/datatables-full/dataTables.bootstrap.min.css') }}
   {{ include_css('tools/tabdyn/styles/tabdyn.css') }}
 
   {{ include_javascript('javascripts/vendor/datatables-full/jquery.dataTables.min.js') }} 
+  {{ include_javascript('javascripts/multidelete.js') }}
   {{ include_javascript('tools/tabdyn/javascripts/components/BazarTable.js', false, true) }}
    
 {% endblock %}
