feat(BazarTable): display data first step

--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -8,7 +8,13 @@
 
 {% extends "@bazar/entries/index-dynamic.twig" %}
 
-{% set necessary_fields = (params.necessary_fields is defined ? params.necessary_fields|split(',') : [])|merge(['owner']) %}
+{% set necessary_fields = (params.necessary_fields is defined ? params.necessary_fields|split(',') : [])
+  |merge(['owner'])
+  |merge((
+    params.columnfieldsids is defined
+    ? params.columnfieldsids|split(',')
+    :[]
+  )) %}
 
 {% block assets %}
   {{ include_css('styles/vendor/datatables-full/dataTables.bootstrap.min.css') }}
@@ -20,7 +26,7 @@
 {% endblock %}
 
 {% block display_entries %}
-  <Bazar-Table :params="params" :entries="entriesToDisplay" :ready="ready" :root="$root" :isadmin="{{ hasAcl("@admins")|json_encode }}">
+  <Bazar-Table :params="params" :entries="entriesToDisplay" :ready="ready" :root="$root" isadmin="{{ hasAcl("@admins")|json_encode }}">
     <template #header="{displayedEntries,BazarTable}"></template>
     <template #spinnerloader="{displayedEntries,BazarTable}">
       <spinner-loader v-if="isLoading || !ready" class="overlay super-overlay" :height="500"></spinner-loader>
