fix(adminbuttons): show all of them

--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -18,6 +18,7 @@
 
 {% block assets %}
   {{ include_css('styles/vendor/datatables-full/dataTables.bootstrap.min.css') }}
+  {{ include_css('tools/bazar/presentation/styles/tableau.css') }}
   {{ include_css('tools/tabdyn/styles/tabdyn.css') }}
 
   {{ include_javascript('javascripts/vendor/datatables-full/jquery.dataTables.min.js') }} 
