--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -104,13 +104,14 @@
         title="{{ _t('DELETEPAGE_NOT_OWNER') }}"
         >
         <i class="fas fa-trash"></i>
-      </buttom>
+      </button>
     </template>
     <template #creationdatetranslate>{{ _t('BAZ_DATE_CREATION') }}</template>
     <template #latitudetext>{{ _t('BAZ_LATITUDE') }}</template>
     <template #longitudetext>{{ _t('BAZ_LONGITUDE') }}</template>
     <template #modifiydatetranslate>{{ _t('BAZ_DATE_MAJ') }}</template>
     <template #ownertranslate>{{ _t('TEMPLATE_OWNER') }}</template>
+    <template #sumtranslate>{{ _t('SUM') }}</template>
     <template #rendercell="{anchorData,fieldtype,addLink,entryId,url}">
       {#- supported fieldtype empty,url -#}
       <template v-if="addLink">
