--- a/templates/bazar/entries/index-dynamic-templates/table.twig
+++ b/templates/bazar/entries/index-dynamic-templates/table.twig
@@ -8,7 +8,7 @@
 
 {% extends "@bazar/entries/index-dynamic.twig" %}
 
-{% set necessary_fields = (params.necessary_fields is defined ? params.necessary_fields|split(',') : [])
+{% set necessary_fields = (necessary_fields is defined ? necessary_fields : (params.necessary_fields is defined ? params.necessary_fields|split(',') : []))
   |merge(['owner'])
   |merge((
     (params.exportallcolumns is defined and (params.exportallcolumns == '1' or params.exportallcolumns == 'true'))
@@ -125,7 +125,7 @@
       </template>
       {#- supported fieldtype empty,link,email,image -#}
       <template v-if="addLink">
-        <a :href="url" v-html="anchorData" class="modalbox" data-size="modal-lg"></a>
+        <a :href="`${url}/iframe`" v-html="anchorData" class="modalbox" data-size="modal-lg" data-iframe="1" :title="anchorData"></a>
       </template>
       <template v-else-if="fieldtype === 'link'">
         <a :href="anchorData" v-html="anchorData" class="modalbox" data-size="modal-lg" data-iframe="1"></a>
